--- a/archives/toutiao-search/2024-04-12.md
+++ b/archives/toutiao-search/2024-04-12.md
@@ -1,59 +1,70 @@
 # 2024-04-12
 
-共 106 条
+共 110 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Fri Apr 12 2024 05:00:38 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Fri Apr 12 2024 06:00:33 GMT+0800 (China Standard Time) -->
 1. [越南女首富张美兰被判处死刑](https://so.toutiao.com/search?keyword=越南女首富张美兰被判处死刑)
 1. [外交部回应莫迪中印关系表态](https://so.toutiao.com/search?keyword=外交部回应莫迪中印关系表态)
 1. [让精耕细作迎接新技术革命](https://so.toutiao.com/search?keyword=让精耕细作迎接新技术革命)
-1. [拜登称“将用核武器保护日本”](https://so.toutiao.com/search?keyword=拜登称“将用核武器保护日本”)
 1. [医生：男性“根浴”易染病](https://so.toutiao.com/search?keyword=医生：男性“根浴”易染病)
+1. [拜登称“将用核武器保护日本”](https://so.toutiao.com/search?keyword=拜登称“将用核武器保护日本”)
 1. [马英九返台重提“九二共识”](https://so.toutiao.com/search?keyword=马英九返台重提“九二共识”)
 1. [李在明：选择我就是对尹锡悦的审判](https://so.toutiao.com/search?keyword=李在明：选择我就是对尹锡悦的审判)
+1. [媒体：“根浴”必须根治](https://so.toutiao.com/search?keyword=媒体：“根浴”必须根治)
 1. [余承东谈车载手机支架 雷军回应](https://so.toutiao.com/search?keyword=余承东谈车载手机支架+雷军回应)
+1. [女子向佛祖告状普陀山二次收费](https://so.toutiao.com/search?keyword=女子向佛祖告状普陀山二次收费)
 1. [“根浴”医院老板曾从富翁变老赖](https://so.toutiao.com/search?keyword=“根浴”医院老板曾从富翁变老赖)
+1. [俄袭击乌克兰后北约战机紧急起飞](https://so.toutiao.com/search?keyword=俄袭击乌克兰后北约战机紧急起飞)
+1. [大学生租车因3毫米划痕被索赔7万](https://so.toutiao.com/search?keyword=大学生租车因3毫米划痕被索赔7万)
+1. [香格里拉地震致数百人受伤不实](https://so.toutiao.com/search?keyword=香格里拉地震致数百人受伤不实)
+1. [大V：李兰娟家族企业为何越来越赚钱](https://so.toutiao.com/search?keyword=大V：李兰娟家族企业为何越来越赚钱)
+1. [哈马斯领导人得知儿孙身亡表现冷静](https://so.toutiao.com/search?keyword=哈马斯领导人得知儿孙身亡表现冷静)
+1. [业主自掏腰包拆了50年老楼重建](https://so.toutiao.com/search?keyword=业主自掏腰包拆了50年老楼重建)
+1. [岸田发言时口误将盟国美国说成中国](https://so.toutiao.com/search?keyword=岸田发言时口误将盟国美国说成中国)
+1. [哈马斯领导人的3个儿子被以军打死](https://so.toutiao.com/search?keyword=哈马斯领导人的3个儿子被以军打死)
+1. [小米SU7车主跑滴滴](https://so.toutiao.com/search?keyword=小米SU7车主跑滴滴)
+1. [女子赤身大闹男生宿舍 警方介入](https://so.toutiao.com/search?keyword=女子赤身大闹男生宿舍+警方介入)
+1. [换表后燃气费暴增？重庆市监局回应](https://so.toutiao.com/search?keyword=换表后燃气费暴增？重庆市监局回应)
+1. [台湾青年随马英九来大陆收获了什么](https://so.toutiao.com/search?keyword=台湾青年随马英九来大陆收获了什么)
+1. [黄磊坦承已经两年多没拍戏](https://so.toutiao.com/search?keyword=黄磊坦承已经两年多没拍戏)
+1. [台退将：两岸要和平统一](https://so.toutiao.com/search?keyword=台退将：两岸要和平统一)
+1. [黄金牛市还能延续多久](https://so.toutiao.com/search?keyword=黄金牛市还能延续多久)
+1. [医保部门从未规定单次住院不超15天](https://so.toutiao.com/search?keyword=医保部门从未规定单次住院不超15天)
+1. [尹锡悦或提早变“跛鸭总统”](https://so.toutiao.com/search?keyword=尹锡悦或提早变“跛鸭总统”)
+1. [不明生物尸体被冲上马来西亚海滩](https://so.toutiao.com/search?keyword=不明生物尸体被冲上马来西亚海滩)
+1. [莫迪称中印应抓紧解决边界问题](https://so.toutiao.com/search?keyword=莫迪称中印应抓紧解决边界问题)
+1. [俄边境泄漏放射物铯137到底是啥](https://so.toutiao.com/search?keyword=俄边境泄漏放射物铯137到底是啥)
+1. [乌方称基辅州最大热电站被俄军摧毁](https://so.toutiao.com/search?keyword=乌方称基辅州最大热电站被俄军摧毁)
+1. [吵架后被拉黑男生到女生楼下求和好](https://so.toutiao.com/search?keyword=吵架后被拉黑男生到女生楼下求和好)
+1. [中方回应美日对中国核政策“关切”](https://so.toutiao.com/search?keyword=中方回应美日对中国核政策“关切”)
+1. [广州白云区潭村拆迁惹争议](https://so.toutiao.com/search?keyword=广州白云区潭村拆迁惹争议)
+1. [律师：拍裸照女子或处至少5日行拘](https://so.toutiao.com/search?keyword=律师：拍裸照女子或处至少5日行拘)
+1. [商务部：美方应立即停止对中企打压](https://so.toutiao.com/search?keyword=商务部：美方应立即停止对中企打压)
+1. [中国买家为何大量取消美澳小麦订单](https://so.toutiao.com/search?keyword=中国买家为何大量取消美澳小麦订单)
+1. [大润发全国闭店十几家](https://so.toutiao.com/search?keyword=大润发全国闭店十几家)
+1. [张颂文说还没去提小米SU7](https://so.toutiao.com/search?keyword=张颂文说还没去提小米SU7)
+1. [浙江一男子持铁锤袭警](https://so.toutiao.com/search?keyword=浙江一男子持铁锤袭警)
+1. [中方反制参与对台售武的相关美企](https://so.toutiao.com/search?keyword=中方反制参与对台售武的相关美企)
+1. [新版智界S7售24.98万元起](https://so.toutiao.com/search?keyword=新版智界S7售24.98万元起)
+1. [媒体评李贵富落马：反腐离不开监督](https://so.toutiao.com/search?keyword=媒体评李贵富落马：反腐离不开监督)
+1. [金价狂飙背后真正推手是谁](https://so.toutiao.com/search?keyword=金价狂飙背后真正推手是谁)
+1. [华为MateBook X Pro应用盘古大模型](https://so.toutiao.com/search?keyword=华为MateBook+X Pro应用盘古大模型)
+1. [放射学专家刘德华逝世 享年100岁](https://so.toutiao.com/search?keyword=放射学专家刘德华逝世+享年100岁)
+1. [5岁女孩与英歌队一起表演自信满满](https://so.toutiao.com/search?keyword=5岁女孩与英歌队一起表演自信满满)
+1. [二手房价泡沫消除 买房时机到了吗](https://so.toutiao.com/search?keyword=二手房价泡沫消除+买房时机到了吗)
+1. [郎朗好莱坞星光大道摘星](https://so.toutiao.com/search?keyword=郎朗好莱坞星光大道摘星)
 1. [女子洗澡时发现窗户伸进半截手机](https://so.toutiao.com/search?keyword=女子洗澡时发现窗户伸进半截手机)
 1. [男子无力还款轻生债权人起诉其家人](https://so.toutiao.com/search?keyword=男子无力还款轻生债权人起诉其家人)
-1. [媒体：“根浴”必须根治](https://so.toutiao.com/search?keyword=媒体：“根浴”必须根治)
-1. [业主自掏腰包拆了50年老楼重建](https://so.toutiao.com/search?keyword=业主自掏腰包拆了50年老楼重建)
-1. [香格里拉地震致数百人受伤不实](https://so.toutiao.com/search?keyword=香格里拉地震致数百人受伤不实)
-1. [小米SU7车主跑滴滴](https://so.toutiao.com/search?keyword=小米SU7车主跑滴滴)
 1. [陶晶莹称黄子佼已社会性死亡](https://so.toutiao.com/search?keyword=陶晶莹称黄子佼已社会性死亡)
-1. [哈马斯领导人得知儿孙身亡表现冷静](https://so.toutiao.com/search?keyword=哈马斯领导人得知儿孙身亡表现冷静)
-1. [中国买家为何大量取消美澳小麦订单](https://so.toutiao.com/search?keyword=中国买家为何大量取消美澳小麦订单)
-1. [岸田发言时口误将盟国美国说成中国](https://so.toutiao.com/search?keyword=岸田发言时口误将盟国美国说成中国)
-1. [大V：李兰娟家族企业为何越来越赚钱](https://so.toutiao.com/search?keyword=大V：李兰娟家族企业为何越来越赚钱)
-1. [女子赤身大闹男生宿舍 警方介入](https://so.toutiao.com/search?keyword=女子赤身大闹男生宿舍+警方介入)
-1. [哈马斯领导人的3个儿子被以军打死](https://so.toutiao.com/search?keyword=哈马斯领导人的3个儿子被以军打死)
-1. [俄袭击乌克兰后北约战机紧急起飞](https://so.toutiao.com/search?keyword=俄袭击乌克兰后北约战机紧急起飞)
-1. [莫迪称中印应抓紧解决边界问题](https://so.toutiao.com/search?keyword=莫迪称中印应抓紧解决边界问题)
-1. [台湾青年随马英九来大陆收获了什么](https://so.toutiao.com/search?keyword=台湾青年随马英九来大陆收获了什么)
-1. [金价狂飙背后真正推手是谁](https://so.toutiao.com/search?keyword=金价狂飙背后真正推手是谁)
-1. [台退将：两岸要和平统一](https://so.toutiao.com/search?keyword=台退将：两岸要和平统一)
-1. [换表后燃气费暴增？重庆市监局回应](https://so.toutiao.com/search?keyword=换表后燃气费暴增？重庆市监局回应)
 1. [美国富翁用儿子血浆给自己换血抗衰](https://so.toutiao.com/search?keyword=美国富翁用儿子血浆给自己换血抗衰)
 1. [韩在野党阵营在国会议员选举中获胜](https://so.toutiao.com/search?keyword=韩在野党阵营在国会议员选举中获胜)
-1. [黄金牛市还能延续多久](https://so.toutiao.com/search?keyword=黄金牛市还能延续多久)
-1. [乌方称基辅州最大热电站被俄军摧毁](https://so.toutiao.com/search?keyword=乌方称基辅州最大热电站被俄军摧毁)
-1. [新版智界S7售24.98万元起](https://so.toutiao.com/search?keyword=新版智界S7售24.98万元起)
-1. [中方反制参与对台售武的相关美企](https://so.toutiao.com/search?keyword=中方反制参与对台售武的相关美企)
 1. [“零首付”能让更多人愿意买车吗](https://so.toutiao.com/search?keyword=“零首付”能让更多人愿意买车吗)
 1. [余承东全程未提“遥遥领先”](https://so.toutiao.com/search?keyword=余承东全程未提“遥遥领先”)
-1. [中方回应美日对中国核政策“关切”](https://so.toutiao.com/search?keyword=中方回应美日对中国核政策“关切”)
 1. [美以情报人员：伊朗即将展开报复](https://so.toutiao.com/search?keyword=美以情报人员：伊朗即将展开报复)
 1. [乌称俄向乌发射40枚导弹40架无人机](https://so.toutiao.com/search?keyword=乌称俄向乌发射40枚导弹40架无人机)
-1. [放射学专家刘德华逝世 享年100岁](https://so.toutiao.com/search?keyword=放射学专家刘德华逝世+享年100岁)
-1. [俄边境泄漏放射物铯137到底是啥](https://so.toutiao.com/search?keyword=俄边境泄漏放射物铯137到底是啥)
 1. [美记者称以总理甘愿冒险与伊朗开战](https://so.toutiao.com/search?keyword=美记者称以总理甘愿冒险与伊朗开战)
 1. [岸田：美日将协调应对“中国挑战”](https://so.toutiao.com/search?keyword=岸田：美日将协调应对“中国挑战”)
-1. [不明生物尸体被冲上马来西亚海滩](https://so.toutiao.com/search?keyword=不明生物尸体被冲上马来西亚海滩)
-1. [律师：拍裸照女子或处至少5日行拘](https://so.toutiao.com/search?keyword=律师：拍裸照女子或处至少5日行拘)
-1. [张颂文说还没去提小米SU7](https://so.toutiao.com/search?keyword=张颂文说还没去提小米SU7)
-1. [女子向佛祖告状普陀山二次收费](https://so.toutiao.com/search?keyword=女子向佛祖告状普陀山二次收费)
-1. [医保部门从未规定单次住院不超15天](https://so.toutiao.com/search?keyword=医保部门从未规定单次住院不超15天)
-1. [大学生租车因3毫米划痕被索赔7万](https://so.toutiao.com/search?keyword=大学生租车因3毫米划痕被索赔7万)
-1. [黄磊坦承已经两年多没拍戏](https://so.toutiao.com/search?keyword=黄磊坦承已经两年多没拍戏)
 1. [中方回应美国“拉黑”4家中企](https://so.toutiao.com/search?keyword=中方回应美国“拉黑”4家中企)
 1. [研究显示中国失独女性达288.8万](https://so.toutiao.com/search?keyword=研究显示中国失独女性达288.8万)
 1. [荣耀回应小米道歉：不必三次](https://so.toutiao.com/search?keyword=荣耀回应小米道歉：不必三次)
@@ -61,13 +72,11 @@
 1. [女生重病之际仍不忘完成学业](https://so.toutiao.com/search?keyword=女生重病之际仍不忘完成学业)
 1. [菲律宾总统小马科斯抵达华盛顿](https://so.toutiao.com/search?keyword=菲律宾总统小马科斯抵达华盛顿)
 1. [伊朗即将对以色列发动大规模袭击吗](https://so.toutiao.com/search?keyword=伊朗即将对以色列发动大规模袭击吗)
-1. [广州白云区潭村拆迁惹争议](https://so.toutiao.com/search?keyword=广州白云区潭村拆迁惹争议)
 1. [重庆一高层居民楼起火暂无人员伤亡](https://so.toutiao.com/search?keyword=重庆一高层居民楼起火暂无人员伤亡)
 1. [胡锡进参加黄帝故里拜祖大典](https://so.toutiao.com/search?keyword=胡锡进参加黄帝故里拜祖大典)
 1. [乌克兰多地能源设施遭袭](https://so.toutiao.com/search?keyword=乌克兰多地能源设施遭袭)
 1. [现在黄金和股票哪个投资风险高](https://so.toutiao.com/search?keyword=现在黄金和股票哪个投资风险高)
 1. [韩国总理等多名高官同时请辞](https://so.toutiao.com/search?keyword=韩国总理等多名高官同时请辞)
-1. [媒体评李贵富落马：反腐离不开监督](https://so.toutiao.com/search?keyword=媒体评李贵富落马：反腐离不开监督)
 1. [80后陈婕任江苏徐州市云龙区委书记](https://so.toutiao.com/search?keyword=80后陈婕任江苏徐州市云龙区委书记)
 1. [姐妹俩涉嫌从事非法经营活动被抓获](https://so.toutiao.com/search?keyword=姐妹俩涉嫌从事非法经营活动被抓获)
 1. [男子因债务自杀 幼子能继承遗产吗](https://so.toutiao.com/search?keyword=男子因债务自杀+幼子能继承遗产吗)
@@ -75,16 +84,11 @@
 1. [华为公布HarmonyOS 4.2升级计划](https://so.toutiao.com/search?keyword=华为公布HarmonyOS+4.2升级计划)
 1. [马英九结束大陆参访行程返台](https://so.toutiao.com/search?keyword=马英九结束大陆参访行程返台)
 1. [外媒：美方将6个中国实体列入管制清单](https://so.toutiao.com/search?keyword=外媒：美方将6个中国实体列入管制清单)
-1. [华为MateBook X Pro应用盘古大模型](https://so.toutiao.com/search?keyword=华为MateBook+X Pro应用盘古大模型)
 1. [如何看待耶伦指责中国工业产能过剩](https://so.toutiao.com/search?keyword=如何看待耶伦指责中国工业产能过剩)
 1. [乌克兰全境拉响防空警报](https://so.toutiao.com/search?keyword=乌克兰全境拉响防空警报)
-1. [商务部：美方应立即停止对中企打压](https://so.toutiao.com/search?keyword=商务部：美方应立即停止对中企打压)
-1. [大润发全国闭店十几家](https://so.toutiao.com/search?keyword=大润发全国闭店十几家)
 1. [战争状态下以色列国内暗流涌动](https://so.toutiao.com/search?keyword=战争状态下以色列国内暗流涌动)
 1. [女子接到研究生补录电话后泪崩](https://so.toutiao.com/search?keyword=女子接到研究生补录电话后泪崩)
 1. [小米SU7赛道首撞当事人发声](https://so.toutiao.com/search?keyword=小米SU7赛道首撞当事人发声)
-1. [浙江一男子持铁锤袭警](https://so.toutiao.com/search?keyword=浙江一男子持铁锤袭警)
-1. [5岁女孩与英歌队一起表演自信满满](https://so.toutiao.com/search?keyword=5岁女孩与英歌队一起表演自信满满)
 1. [几百吨的飞机是如何起飞的](https://so.toutiao.com/search?keyword=几百吨的飞机是如何起飞的)
 1. [美日首脑在白宫谈了大概2小时](https://so.toutiao.com/search?keyword=美日首脑在白宫谈了大概2小时)
 1. [马斯克公布太空轨道日全食视角](https://so.toutiao.com/search?keyword=马斯克公布太空轨道日全食视角)
