--- a/archives/toutiao-search/2024-04-12.md
+++ b/archives/toutiao-search/2024-04-12.md
@@ -1,44 +1,66 @@
 # 2024-04-12
 
-共 128 条
+共 148 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Fri Apr 12 2024 08:26:20 GMT+0800 (China Standard Time) -->
-1. [越南女首富庭审时的最后陈词](https://so.toutiao.com/search?keyword=越南女首富庭审时的最后陈词)
-1. [警方通报女子一丝不挂大闹男生宿舍](https://so.toutiao.com/search?keyword=警方通报女子一丝不挂大闹男生宿舍)
-1. [让精耕细作迎接新技术革命](https://so.toutiao.com/search?keyword=让精耕细作迎接新技术革命)
-1. [如何看待莫迪关于中印关系的表态](https://so.toutiao.com/search?keyword=如何看待莫迪关于中印关系的表态)
+<!-- 最后更新时间 Fri Apr 12 2024 09:39:52 GMT+0800 (China Standard Time) -->
 1. [公职人员打人被训诫 被打者不服](https://so.toutiao.com/search?keyword=公职人员打人被训诫+被打者不服)
-1. [小米SU7车主回应跑滴滴：纯属瞎玩](https://so.toutiao.com/search?keyword=小米SU7车主回应跑滴滴：纯属瞎玩)
-1. [辛普森去世](https://so.toutiao.com/search?keyword=辛普森去世)
-1. [伊朗对联合国开不惩罚以色列条件](https://so.toutiao.com/search?keyword=伊朗对联合国开不惩罚以色列条件)
-1. [医生：男性“根浴”易染病](https://so.toutiao.com/search?keyword=医生：男性“根浴”易染病)
-1. [越南女首富张美兰被判处死刑](https://so.toutiao.com/search?keyword=越南女首富张美兰被判处死刑)
-1. [钟美美现状：自称过气有钱就挣](https://so.toutiao.com/search?keyword=钟美美现状：自称过气有钱就挣)
+1. [如何看待莫迪关于中印关系的表态](https://so.toutiao.com/search?keyword=如何看待莫迪关于中印关系的表态)
+1. [让精耕细作迎接新技术革命](https://so.toutiao.com/search?keyword=让精耕细作迎接新技术革命)
+1. [拜登与岸田文雄发表美日联合声明](https://so.toutiao.com/search?keyword=拜登与岸田文雄发表美日联合声明)
 1. [男子被开除2天又返聘 工资低一万多](https://so.toutiao.com/search?keyword=男子被开除2天又返聘+工资低一万多)
+1. [越南女首富庭审时的最后陈词](https://so.toutiao.com/search?keyword=越南女首富庭审时的最后陈词)
+1. [台名嘴谈马英九访大陆遭美日抹黑](https://so.toutiao.com/search?keyword=台名嘴谈马英九访大陆遭美日抹黑)
+1. [五一调休放5天](https://so.toutiao.com/search?keyword=五一调休放5天)
+1. [小米SU7车主回应跑滴滴：纯属瞎玩](https://so.toutiao.com/search?keyword=小米SU7车主回应跑滴滴：纯属瞎玩)
+1. [菲律宾前总统：美国让南海充满争吵](https://so.toutiao.com/search?keyword=菲律宾前总统：美国让南海充满争吵)
+1. [钟美美现状：自称过气有钱就挣](https://so.toutiao.com/search?keyword=钟美美现状：自称过气有钱就挣)
+1. [林更新被曝开车载女友](https://so.toutiao.com/search?keyword=林更新被曝开车载女友)
 1. [官方辟谣西安骡马市打架致人死亡](https://so.toutiao.com/search?keyword=官方辟谣西安骡马市打架致人死亡)
-1. [余承东谈车载手机支架 雷军回应](https://so.toutiao.com/search?keyword=余承东谈车载手机支架+雷军回应)
-1. [外交部回应莫迪中印关系表态](https://so.toutiao.com/search?keyword=外交部回应莫迪中印关系表态)
-1. [张颂文说还没去提小米SU7](https://so.toutiao.com/search?keyword=张颂文说还没去提小米SU7)
-1. [马英九返台重提“九二共识”](https://so.toutiao.com/search?keyword=马英九返台重提“九二共识”)
-1. [92号油价或将超8.3元/升](https://so.toutiao.com/search?keyword=92号油价或将超8.3元/升)
-1. [女子向佛祖告状普陀山二次收费](https://so.toutiao.com/search?keyword=女子向佛祖告状普陀山二次收费)
-1. [换表后燃气费暴增？重庆市监局回应](https://so.toutiao.com/search?keyword=换表后燃气费暴增？重庆市监局回应)
-1. [广州白云区潭村拆迁惹争议](https://so.toutiao.com/search?keyword=广州白云区潭村拆迁惹争议)
-1. [李在明：选择我就是对尹锡悦的审判](https://so.toutiao.com/search?keyword=李在明：选择我就是对尹锡悦的审判)
+1. [辛普森去世](https://so.toutiao.com/search?keyword=辛普森去世)
+1. [医生：男性“根浴”易染病](https://so.toutiao.com/search?keyword=医生：男性“根浴”易染病)
 1. [国际金价跳水仍处历史高位](https://so.toutiao.com/search?keyword=国际金价跳水仍处历史高位)
-1. [美国富翁用儿子血浆给自己换血抗衰](https://so.toutiao.com/search?keyword=美国富翁用儿子血浆给自己换血抗衰)
-1. [拜登称“将用核武器保护日本”](https://so.toutiao.com/search?keyword=拜登称“将用核武器保护日本”)
+1. [韩国歌手朴宝蓝去世](https://so.toutiao.com/search?keyword=韩国歌手朴宝蓝去世)
+1. [伊朗对联合国开不惩罚以色列条件](https://so.toutiao.com/search?keyword=伊朗对联合国开不惩罚以色列条件)
+1. [特朗普：拜登已经放弃以色列](https://so.toutiao.com/search?keyword=特朗普：拜登已经放弃以色列)
+1. [广州白云区潭村拆迁惹争议](https://so.toutiao.com/search?keyword=广州白云区潭村拆迁惹争议)
+1. [警方通报女子一丝不挂大闹男生宿舍](https://so.toutiao.com/search?keyword=警方通报女子一丝不挂大闹男生宿舍)
+1. [92号油价或将超8.3元/升](https://so.toutiao.com/search?keyword=92号油价或将超8.3元/升)
+1. [越南女首富张美兰被判处死刑](https://so.toutiao.com/search?keyword=越南女首富张美兰被判处死刑)
+1. [激光炮解救被吊在电线上的夜鹭](https://so.toutiao.com/search?keyword=激光炮解救被吊在电线上的夜鹭)
+1. [瘫痪男子自学编织2年还清5万欠债](https://so.toutiao.com/search?keyword=瘫痪男子自学编织2年还清5万欠债)
 1. [金价狂飙背后真正推手是谁](https://so.toutiao.com/search?keyword=金价狂飙背后真正推手是谁)
-1. [大学生租车因3毫米划痕被索赔7万](https://so.toutiao.com/search?keyword=大学生租车因3毫米划痕被索赔7万)
-1. [5岁英歌舞小女孩再亮相表演](https://so.toutiao.com/search?keyword=5岁英歌舞小女孩再亮相表演)
-1. [黄磊坦承已经两年多没拍戏](https://so.toutiao.com/search?keyword=黄磊坦承已经两年多没拍戏)
-1. [余承东全程未提“遥遥领先”](https://so.toutiao.com/search?keyword=余承东全程未提“遥遥领先”)
+1. [美官员声称中国企图孤立菲律宾等国](https://so.toutiao.com/search?keyword=美官员声称中国企图孤立菲律宾等国)
+1. [律师解读福建规定妻子可查配偶财产](https://so.toutiao.com/search?keyword=律师解读福建规定妻子可查配偶财产)
+1. [余承东谈车载手机支架 雷军回应](https://so.toutiao.com/search?keyword=余承东谈车载手机支架+雷军回应)
+1. [张颂文说还没去提小米SU7](https://so.toutiao.com/search?keyword=张颂文说还没去提小米SU7)
+1. [女子向佛祖告状普陀山二次收费](https://so.toutiao.com/search?keyword=女子向佛祖告状普陀山二次收费)
+1. [拜登称“将用核武器保护日本”](https://so.toutiao.com/search?keyword=拜登称“将用核武器保护日本”)
+1. [万达出售旗下圣汐游艇](https://so.toutiao.com/search?keyword=万达出售旗下圣汐游艇)
+1. [美国富翁用儿子血浆给自己换血抗衰](https://so.toutiao.com/search?keyword=美国富翁用儿子血浆给自己换血抗衰)
 1. [“根浴”医院老板曾从富翁变老赖](https://so.toutiao.com/search?keyword=“根浴”医院老板曾从富翁变老赖)
+1. [大学生租车因3毫米划痕被索赔7万](https://so.toutiao.com/search?keyword=大学生租车因3毫米划痕被索赔7万)
+1. [武警特战队员考核场上有多拼](https://so.toutiao.com/search?keyword=武警特战队员考核场上有多拼)
+1. [官方否认“根浴”服务纳入医保](https://so.toutiao.com/search?keyword=官方否认“根浴”服务纳入医保)
+1. [换表后燃气费暴增？重庆市监局回应](https://so.toutiao.com/search?keyword=换表后燃气费暴增？重庆市监局回应)
+1. [俄边境泄漏放射物铯137到底是啥](https://so.toutiao.com/search?keyword=俄边境泄漏放射物铯137到底是啥)
+1. [国产720Wh/kg全固态电池发布引关注](https://so.toutiao.com/search?keyword=国产720Wh/kg全固态电池发布引关注)
+1. [5岁英歌舞小女孩再亮相表演](https://so.toutiao.com/search?keyword=5岁英歌舞小女孩再亮相表演)
+1. [退休女教师奶奶忍受了一辈子冷暴力](https://so.toutiao.com/search?keyword=退休女教师奶奶忍受了一辈子冷暴力)
+1. [老人拄拐不敢下坡女子路过顺手扶下](https://so.toutiao.com/search?keyword=老人拄拐不敢下坡女子路过顺手扶下)
+1. [郎朗好莱坞星光大道摘星](https://so.toutiao.com/search?keyword=郎朗好莱坞星光大道摘星)
+1. [《承欢记》诠释当代母女关系](https://so.toutiao.com/search?keyword=《承欢记》诠释当代母女关系)
+1. [黄磊坦承已经两年多没拍戏](https://so.toutiao.com/search?keyword=黄磊坦承已经两年多没拍戏)
+1. [武汉一楼盘降价 老业主怒砸售楼部](https://so.toutiao.com/search?keyword=武汉一楼盘降价+老业主怒砸售楼部)
+1. [男子持械殴打交警协勤人员已被控制](https://so.toutiao.com/search?keyword=男子持械殴打交警协勤人员已被控制)
+1. [武大开设雷军班100%保研](https://so.toutiao.com/search?keyword=武大开设雷军班100%保研)
+1. [外交部回应莫迪中印关系表态](https://so.toutiao.com/search?keyword=外交部回应莫迪中印关系表态)
+1. [马英九返台重提“九二共识”](https://so.toutiao.com/search?keyword=马英九返台重提“九二共识”)
+1. [李在明：选择我就是对尹锡悦的审判](https://so.toutiao.com/search?keyword=李在明：选择我就是对尹锡悦的审判)
+1. [余承东全程未提“遥遥领先”](https://so.toutiao.com/search?keyword=余承东全程未提“遥遥领先”)
 1. [医保部门从未规定单次住院不超15天](https://so.toutiao.com/search?keyword=医保部门从未规定单次住院不超15天)
 1. [新版智界S7售24.98万元起](https://so.toutiao.com/search?keyword=新版智界S7售24.98万元起)
 1. [俄袭击乌克兰后北约战机紧急起飞](https://so.toutiao.com/search?keyword=俄袭击乌克兰后北约战机紧急起飞)
-1. [俄边境泄漏放射物铯137到底是啥](https://so.toutiao.com/search?keyword=俄边境泄漏放射物铯137到底是啥)
 1. [美防长：我是俄罗斯人也不愿乌入约](https://so.toutiao.com/search?keyword=美防长：我是俄罗斯人也不愿乌入约)
 1. [哈马斯领导人得知儿孙身亡表现冷静](https://so.toutiao.com/search?keyword=哈马斯领导人得知儿孙身亡表现冷静)
 1. [华为MateBook X Pro应用盘古大模型](https://so.toutiao.com/search?keyword=华为MateBook+X Pro应用盘古大模型)
@@ -53,7 +75,6 @@
 1. [台媒体人称马英九提抗日惹怒日学者](https://so.toutiao.com/search?keyword=台媒体人称马英九提抗日惹怒日学者)
 1. [女子银行转账等一个多小时急的大哭](https://so.toutiao.com/search?keyword=女子银行转账等一个多小时急的大哭)
 1. [杜兰特：海兰德好胜心极强](https://so.toutiao.com/search?keyword=杜兰特：海兰德好胜心极强)
-1. [武大开设雷军班100%保研](https://so.toutiao.com/search?keyword=武大开设雷军班100%保研)
 1. [大V：李兰娟家族企业为何越来越赚钱](https://so.toutiao.com/search?keyword=大V：李兰娟家族企业为何越来越赚钱)
 1. [香格里拉地震致数百人受伤不实](https://so.toutiao.com/search?keyword=香格里拉地震致数百人受伤不实)
 1. [小米SU7车主跑滴滴](https://so.toutiao.com/search?keyword=小米SU7车主跑滴滴)
@@ -72,7 +93,6 @@
 1. [浙江一男子持铁锤袭警](https://so.toutiao.com/search?keyword=浙江一男子持铁锤袭警)
 1. [律师：拍裸照女子或处至少5日行拘](https://so.toutiao.com/search?keyword=律师：拍裸照女子或处至少5日行拘)
 1. [业主称家里没装修电表走了七千多度](https://so.toutiao.com/search?keyword=业主称家里没装修电表走了七千多度)
-1. [郎朗好莱坞星光大道摘星](https://so.toutiao.com/search?keyword=郎朗好莱坞星光大道摘星)
 1. [赵丽颖林更新还原与凤行名场面](https://so.toutiao.com/search?keyword=赵丽颖林更新还原与凤行名场面)
 1. [尹同跃称中国要想造好车离不开华为](https://so.toutiao.com/search?keyword=尹同跃称中国要想造好车离不开华为)
 1. [二手房价泡沫消除 买房时机到了吗](https://so.toutiao.com/search?keyword=二手房价泡沫消除+买房时机到了吗)
